Fix link highlights on mobile

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -10,7 +10,6 @@
     font-style: normal
     font-weight: bold
 
-
 body
     background-color: $bg
     background-image: url(../img/bg.jpg)
@@ -20,6 +19,7 @@ body
     font-weight: 400
     overflow-x: hidden //чтобы самолетик скрыть
     font-size: 25px
+
 
 .container
     max-width: 1200px //чтобы считать ширину элементов от него
@@ -268,6 +268,7 @@ body
         max-width: 251px
         width: 100%
         transition: all .5s
+        -webkit-tap-highlight-color: transparent
         &:hover .main-tour-text_small
             color: $accent-text
         &_wrapper
